--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,27 @@
+:root{
+  --textColor: white;
+  --backgroundColor: black;
+}
+
 html,body, #root {
   width: 100%;
   height: 100%;
 }
 
+body{
+  background-color: var(--backgroundColor);
+  transition: background-color 0.3s;
+}
+
+.pointer:hover{
+  cursor: pointer;
+}
+
 *{
   margin: 0;
   padding: 0;
+}
+
+.text-color{
+  color: var(--textColor);
 }
