create new task window

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ body {
   color: var(--textColor);
 }
 
+.background-color {
+  background-color: var(--backgroundColor);
+}
+
 .item-background-color {
   background-color: var(--itemBackgroundColor);
 }
