--- a/src/CreateTask/CreateTask.css
+++ b/src/CreateTask/CreateTask.css
@@ -9,16 +9,66 @@
   transition: background-color 0.3s;
 }
 
+.softBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  z-index: 1;
+}
+
 .create-task {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 450px;
   height: 500px;
-  padding: 30px;
+  padding: 25px 35px;
+  border-radius: 15px;
+  z-index: 1;
+}
+
+.title-btn-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.close-btn {
+  background-color: transparent;
+  border: 0;
+}
+
+.input-container {
+  width: max-content;
+  height: max-content;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  border-radius: 15px;
+}
+
+.input-container div {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+input[type=text] {
+  width: 300px;
+  padding: 10px;
+  height: 10px;
+}
+
+.textarea {
+  width: 400px;
+  height: 200px;
+}
+
+input[type=datetime-local]{
+  width: 200px;
+  font-size: 15px;
+  padding: 5px;
 }
