--- a/src/CreateTask/CreateTask.css
+++ b/src/CreateTask/CreateTask.css
@@ -60,6 +60,8 @@ input[type=text] {
   width: 300px;
   padding: 10px;
   height: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .textarea {
@@ -67,13 +69,15 @@ input[type=text] {
   height: 200px;
   padding: 10px;
   resize: none;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 input[type=datetime-local] {
   width: 200px;
   padding: 10px;
   font-size: 15px;
-  border-radius: 10px;
+  border-radius: 5px;
   border: 1px solid black;
   padding: 5px;
 }
