--- a/src/TaskCard/TaskCard.css
+++ b/src/TaskCard/TaskCard.css
@@ -1,33 +1,57 @@
-.task-card {
+.task-car-container{
   position: relative;
   width: 200px;
   height: 200px;
   border-radius: 10px;
+}
+
+.task-card {
+  width: 100%;
+  height: 100%;
   padding: 25px;
+  position: relative;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  border-radius: 10px;
 }
 
 .task-card:hover{
   cursor: grab;
 }
 
+.task-completed{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 25px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background-color: rgba(147, 228, 147, 0.53);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
 .task-card .button-container {
   transition: all 0.5s;
   position: absolute;
+  z-index: 3;
   bottom: 0;
   left: 0;
   width: 100%;
-  /* height: 50px; */
 }
 
 
 .hide{
+  opacity: 0;
   height: 0;
 }
 
 .show{
+  opacity: 1;
   height: 50px;
 }
 
@@ -48,6 +72,10 @@
   background-color: rgb(179, 177, 177);
 }
 
+.button-container .icon{
+  font-size: 20px;
+}
+
 .completed:hover {
   background-color: rgb(111, 110, 110);
   color: rgb(255, 255, 255);
@@ -55,7 +83,6 @@
 
 .button-container button {
   background-color: transparent;
-  font-size: 20px;
   width: 50%;
   padding: 15px;
   border: 0;
