--- a/src/TaskCard/TaskCard.css
+++ b/src/TaskCard/TaskCard.css
@@ -1,18 +1,17 @@
-.task-car-container{
+.task-card-container{
   position: relative;
   width: 200px;
   height: 200px;
   border-radius: 10px;
+  padding: 15px;
+  overflow: hidden;
 }
 
 .task-card {
   width: 100%;
   height: 100%;
-  padding: 25px;
-  position: relative;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   border-radius: 10px;
 }
 
@@ -24,7 +23,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 25px;
   width: 100%;
   height: 100%;
   border-radius: 10px;
