--- a/src/TaskCard/TaskCard.css
+++ b/src/TaskCard/TaskCard.css
@@ -1,7 +1,7 @@
 .task-card-container {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 240px;
+  height: max-content;
   border-radius: 10px;
   padding: 15px;
   overflow: hidden;
@@ -12,20 +12,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 5px;
 }
 
 .title {
-  height: 30px;
+  width: 100%;
+  height: 40px;
 }
 
-.note{
+.note {
   width: 100%;
-  line-break: auto;
   word-break: break-all;
   height: 145px;
 }
 
-.date{
+.date {
   width: 100%;
   height: 20px;
 }
@@ -35,13 +36,15 @@
 }
 
 .task-card .edit-btn {
-  position: absolute;
+  position: relative;
   padding: 10px;
   font-size: 15px;
-  top: 0;
-  right: 0;
   background-color: transparent;
   border: 0;
+}
+
+.task-card .title-edit-container {
+  display: flex;
 }
 
 .task-completed {
