--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,35 @@ body {
   padding: 0;
 }
 
+h1, h2, h3, h4, h5, h6, p{
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1{
+  font-size: 20px;
+  font-weight: 700;
+}
+
+h2{
+  font-size: 25px;
+  font-weight: 700;
+}
+
+h3{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+h4{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+p{
+  font-size: 15px;
+  font-weight: 500;
+}
+
 .text-color {
   color: var(--textColor);
 }
