--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p{
+h1, h2, h3, h4, h5, h6, p, input, textarea{
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -53,6 +53,14 @@ h4{
 p{
   font-size: 15px;
   font-weight: 500;
+}
+
+input{
+  font-size: 15px;
+}
+
+textarea{
+  font-size: 15px;
 }
 
 .text-color {
