--- a/src/TaskCard/TaskCard.css
+++ b/src/TaskCard/TaskCard.css
@@ -16,6 +16,8 @@
 }
 
 .title {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 40px;
 }
@@ -37,7 +39,7 @@
 
 .task-card .edit-btn {
   position: relative;
-  padding: 10px;
+  padding: 10px 0 10px 10px;
   font-size: 15px;
   background-color: transparent;
   border: 0;
