--- a/src/Filter/Filter.css
+++ b/src/Filter/Filter.css
@@ -6,11 +6,13 @@
 }
 
 #filter-container fieldset{
+  position: relative;
   border-top: none;
   width: 100px;
   height: 30px;
   padding: 15px 20px;
   border-radius: 0 0 20px 20px;
+  top: -20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,12 +32,13 @@ input[type=radio]{
   height: 15px;
   transition: all 0.1s;
   appearance: none;
-  border: 2px solid white;
+  background-color: white;
+  border: 1px solid black;
   border-radius: 50%;
 }
 
 input[type=radio]:checked{
-  background-color: white;
+  background-color: green;
   width: 20px;
   height: 20px;
 }
