--- a/src/TaskInfo/TaskInfo.css
+++ b/src/TaskInfo/TaskInfo.css
@@ -1,4 +1,3 @@
-
 .softBackground {
   position: absolute;
   top: 0;
@@ -41,16 +40,26 @@
 }
 
 .input-container div {
+  position: relative;
   display: flex;
   flex-direction: column;
 }
 
 input[type=text] {
-  width: 300px;
   padding: 10px;
   height: 10px;
   border: 1px solid black;
   border-radius: 5px;
+}
+
+.input-container .counter {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: transparent;
+  border: 0;
+  padding: 0 4px 5px;
+  color: black;
 }
 
 .textarea {
@@ -70,7 +79,7 @@ input[type=datetime-local] {
   padding: 5px;
 }
 
-.input-container button{
+.input-container button {
   margin: 20px auto;
   width: 150px;
   padding: 10px;
