--- a/src/TaskContainer/TaskContainer.css
+++ b/src/TaskContainer/TaskContainer.css
@@ -3,8 +3,8 @@
   height: max-content;
   display: flex;
   flex-direction: row;
-  justify-content: start;
-  align-items: start;
+  justify-content: flex-start;
+  align-items: flex-start;
   padding: 15px;
   gap: 20px;
   flex-wrap: wrap;
